urpc/internal/core/analysis/testdata/errors/types/undefined_type.ufo
// @expect: E201

type User {
	profile: Profile
}
